<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/num"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="Business Number"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint = "Business Name"
        app:layout_constraintTop_toBottomOf="@+id/num"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/primary"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="Primary Business"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="Address"
        app:layout_constraintTop_toBottomOf="@+id/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="Province/Territory"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Data"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:onClick="updateBusiness" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Business"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="eraseBusiness" />



</android.support.constraint.ConstraintLayout>
